--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket wf-lambda-artifacts
+      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket wf-lambda-archives
                                    --output-template-file NewSamTemplate.yaml
 artifacts:
   type: zip
